--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -19,16 +19,8 @@ baseURL = "https://example.com"
 
 [module]
     [[module.mounts]]
-        source = "assets"
-        target = "assets"
-    [[module.mounts]]
-        source = "layouts"
-        target = "layouts"
-    [[module.mounts]]
-        source = "i18n"
-        target = "i18n"
-    [[module.mounts]]
-        source = "static"
-        target = "static"
+        source = "content"
+        target = "content"
+
     [[module.imports]]
-        path = "github.com/bep/gallerydeluxe"
+        path = "github.com/bep/galleriesdeluxe"
