--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,18 @@
 [build]
     publish = "exampleSite/public"
-    command = "hugo --gc -s exampleSite --minify"
+    command = "./hugo-ci.sh --gc -s exampleSite --minify"
 
     [build.environment]
-        HUGO_VERSION = "0.115.0"
+        HUGO_VERSION = "0.115.1"
 
 [context.deploy-preview]
-    command = "hugo -s exampleSite --minify -D -F -b $DEPLOY_PRIME_URL"
+    command = "./hugo-ci.sh -s exampleSite --minify -D -F -b $DEPLOY_PRIME_URL"
+
+    [context.deploy-preview.environment]
+        HUGO_VERSION = "0.115.1"
 
 [context.branch-deploy]
-    command = "hugo -s exampleSite --minify --gc -b $DEPLOY_PRIME_URL"
+    command = "./hugo-ci.sh -s exampleSite --minify --gc -b $DEPLOY_PRIME_URL"
+
+    [context.branch-deploy.environment]
+        HUGO_VERSION = "0.115.1"
