Add config option sass_transpiler
I do recommend using Dart Sass, but until the installation of that with Hugo gets a little more streamlined, we may as well also support libsass as long as that
is possible:

```toml
[params]
    [params.galleriesdeluxe]
        # One of dartsass or libsass.
        sass_transpiler = "libsass"
```

Closes #1

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -16,6 +16,8 @@ baseURL = "https://galleriesdeluxe.netlify.app/"
     description = "A Hugo gallery website"
 
     [params.galleriesdeluxe]
+        # One of dartsass or libsass.
+        sass_transpiler = "dartsass"
         [params.galleriesdeluxe.sassvars]
             color_background = "#1d1e2c"
 
